manifests/prometheus-stack/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: prometheus-stack
  annotations:
    cert-manager.io/cluster-issuer: omnicloud
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.1.1
    - type: IPAddress
      value: fd72:5af2:852f:1162:10:0:1:1
  listeners:
    - name: https
      hostname: grafana.omnilium.local
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: grafana-tls
